2013-10-22  Simon Cook  <simon.cook@embecosm.com>

	* include/mageec-db.h (add_result): Add support for adding result to
	database.
	* include/mageec-ml.h (add_result): Add result struct based variant.
	* include/mageec-result.h (result): Create structure for holding
	machine learning result data.
	* include/mageec.h (hash_data): Add global hash function.
	* mageec/Makefile.am: Add hasher.cpp to libmageec.
	* mageec/Makefile.in: Regenerated.
	* mageec/elfhash.cpp: Use hash_data instead of built in hash.
	* ml/database.cpp (initdb): Create passorder and result tables.
	(add_result): Add storage for result structure.
	* ml/ml.cpp (add_result): Convert to result structure and add to
	database.

2013-10-22  Simon Cook  <simon.cook@embecosm.com>

	* ml/Makefile.am: Readd -Werror to flags.
	* ml/Makefile.in: Regenerated.

2013-10-21  Simon Cook  <simon.cook@embecosm.com>

	* mageec/flags.cpp, include/mageec-flags.h: Rename to:
	* mageec/passes.cpp, include/mageec-passes.h.
	* include/mageec-ml.h: Update references to headers.
	* include/mageec-passes.h (mageec_flag): Renamed to mageec_pass.
	(basic_flag): Renamed to basic_pass.
	* mageec/passes.cpp: Likewise.
	* gcc_plugin/gcc_plugin.cpp (plugin_init): Update references to
	new pass class names.
	* include/mageec.h, mageec/mageec.cpp (mageec_framework::all_flags):
	Renamed to all_passes, updated references to new class names.
	* include/mageec-ml.h, ml/ml.cpp (mageec_ml::all_flags): Likewise.
	* include/mageec-db.h (get_flag_list): Renamed to get_pass_list, update
	references to new class names.
	* ml/database.cpp: Likewise.

2013-10-21  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/gcc-plugin.cpp (plugin_init): Disable all passes provided
	by database on launch.
	* include/mageec-db.h (mageec::database): Declared first database
	interface.
	* include/mageec-features.h (mageec_feature): Mark name virtual.
	(basic_feature): Implement basic mageec_feature.